--- a/Minesweeper Initial Dev Assignment/Minesweeper Initial Dev Assignment.csproj
+++ b/Minesweeper Initial Dev Assignment/Minesweeper Initial Dev Assignment.csproj
@@ -116,5 +116,8 @@
   <ItemGroup>
     <None Include="Resources\TILE_CLEAR.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="IMAGES\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
