Fixed recursion! working on UI

--- a/Minesweeper Initial Dev Assignment/Minesweeper Initial Dev Assignment.csproj
+++ b/Minesweeper Initial Dev Assignment/Minesweeper Initial Dev Assignment.csproj
@@ -119,5 +119,8 @@
   <ItemGroup>
     <Folder Include="IMAGES\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\BACKGROUND.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
